# scHCLpy

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  reference_hcl.py  reference_hcl.py.old  scHCL.r  setup.py
scHCLpy/: adata.py  cellontology.py  main.py  reference_hcl.py  scHCL_reference_issues.ipynb
